# Dje

./: .cache  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SETUP_DISCORD.md  SETUP_SPOTIFY.md  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
assets/: README.md
src/dje/: __main__.py  audio.py  audio_debug.py  autoplay.py  bot.py  config.py  i18n.py  logging_config.py  network_health.py  player.py  settings.py  spotify.py  tracks.py  ui.py  ui_shortcuts.py  voice.py  youtube.py
tests/: __init__.py  test_network_health.py
